# workflow-engine-desktop

./: .gitee.yml  .gitignore  AGENTS.md  CHANGELOG.md  CI-DIAGNOSIS-REPORT.md  CI-FIX-VERIFICATION.md  CODE-WIKI.md  CONSISTENCY_REPORT.md  DESIGN.md  DEVELOPMENT-PLAN.md  FINAL-COMPREHENSIVE-AUDIT.md  GUI-DIAGNOSIS-REPORT.md  IMPROVEMENT_PLAN.md  IPC-DESIGN.md  LIBRARY-DESIGN-v2.md  LIBRARY-DESIGN.md  LOGIC-CHAIN-AUDIT.md  README.md  ROADMAP-v6.9-v7.0.md  ROADMAP-v8.0.md  SPEC.md  UI-UX-AUDIT.md  UX-REVIEW-2026-05-17.md  build-log.txt  build.ps1  build.ps1.bak  components.json  dev-progress-v3.4.0.md  eslint.config.js  findings.md  index.html  installer.iss  openmemory.db  package-lock.json  package.json  progress.md  reasonix.toml  registry.json  start.bat  task_plan.md  (+3 more)
.cargo/: config.toml
.codegraph/: daemon.pid
.reasonix/: desktop-topic-title-sources.json  desktop-topic-titles.json  fix-canvas.ps1  run-task.ps1  task-v8.2.md
debian/: control  layout.md  postinst  wf-engine.default  wf-engine.service
docs/: ARCHITECTURE.md  CODEBASE_ANALYSIS.md  CODE_ANALYSIS.md  HARNESS.md  HELP.md  USER_GUIDE.md  code-health-report.md  dag-comfyui-audit.md  learning-ui-tars.md  node-io-spec.md  operation-logic-v2.md  phase2-integration-test-plan.md  phase3-unified-resolve-plan.md  v2.0-code-audit-2026-04-29.md  variable-flow-refactor-plan.md  workflow-engine-agent-skill.md  参数内嵌方案讨论.md  执行逻辑修复方案.md
examples/: create_test_data.py  pipeline_workflow.yaml  report_output.docx  report_template.docx  report_template_output.docx  run_full_pipeline.py  run_pipeline.py  test_data.xlsx  test_report_output.docx
public/: offline.html
scripts/: bump-version.sh  check_decision_memory.py  check_docs_drift.py  (+3 more)
src/: App.vue  (+8 more)
src-tauri/: .gitignore  Cargo.toml  build.rs  check.txt  check_cli.txt  check_output.txt  gen_icons.py  node-schema.json  tauri.conf.json  tauri.lite.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/sidecars/: desktop_recorder.py  mcp-external.example.json  mcp_excel_server.py  mcp_http_server.py  mcp_json_server.py  mcp_protocol.py  mcp_samba_server.py  mcp_script_server.py  mcp_shell_server.py  mcp_web_scrape_server.py  mcp_word_server.py  playwright_driver.py  repl_skin.py
src-tauri/src/: cli.rs  ipc.rs  ipc_client.rs  lib.rs  main.rs
src-tauri/src/commands/: browser_recording.rs  dag_run.rs  mod.rs  pipeline.rs  plugin.rs  preview.rs  run.rs  schedule.rs  system.rs  template.rs  workflow.rs
src-tauri/src/data/: config.rs  db.rs  mod.rs  models.rs  paths.rs
src-tauri/src/data/db/: mod.rs  queries.rs  schema.rs
src-tauri/src/engine/: action_def.rs  approval_store.rs  collect.rs  common.rs  context.rs  dag.rs  dag_scheduler.rs  error.rs  executor.rs  mod.rs  parser.rs  placeholder.rs  plugin_manager.rs  preview.rs  recording_converter.rs  scheduler.rs  skill_generator.rs  state.rs  validate.rs  workflow.rs  yaml_format.rs
src-tauri/src/nodes/: approval.rs  array.rs  browser.rs  browser_container.rs  clipboard.rs  clipboard_container.rs  condition.rs  convert.rs  cursor.rs  data.rs  data_filter.rs  database_query.rs  delay.rs  email_send.rs  error_utils.rs  excel.rs  excel_container.rs  file.rs  file_container.rs  file_save.rs  github_issue.rs  http.rs  im_message.rs  json_parse.rs  json_schema_extract.rs  json_transform.rs  kimi_browser.rs  llm_agent.rs  llm_chat.rs  llm_embedding.rs  loop_node.rs  map.rs  mcp_node.rs  mod.rs  mongodb_node.rs  mouse_keyboard.rs  node_registry.rs  notify.rs  ocr.rs  parallel.rs  (+25 more)
src-tauri/src/platform/: linux.rs  linux_window.rs  mod.rs  recording.rs  traits.rs  windows.rs  windows_window.rs
src-tauri/src/server/: auth.rs  events.rs  handlers.rs  mod.rs  routes.rs  sse.rs  state.rs
src-tauri/src/server/managers/: approval_manager.rs  compose_manager.rs  mod.rs  preview_manager.rs  run_manager.rs  schedule_manager.rs  system_manager.rs  template_manager.rs  workflow_manager.rs
src-tauri/src/system/: mod.rs  scheduler.rs  tray.rs
src-tauri/templates/: data_pipeline.yaml  file_processor.yaml  http_fetch.yaml  shell_script.yaml  web_scrape_excel.yaml
src-tauri/tests/: context_tests.rs  integration_test.rs  library_template_tests.rs  new_nodes.rs  parser_tests.rs  scheduler_tests.rs  template_exec_tests.rs  template_tests.rs  variable_flow_tests.rs
src-tauri/tests/fixtures/: sample.json  simple.html
(+290 files in other folders)
