[package]
name = "workflow-engine"
version = "1.2.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
async-trait = "0.1"
which = "7"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
tokio-util = { version = "0.7", features = ["rt"] }
tracing-appender = "0.2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rhai = "1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry", "fmt"] }
futures = "0.3"
cron = "0.13"
calamine = "0.24"
rust_xlsxwriter = "0.63"
zip = "0.6"
anyhow = "1"
thiserror = "2"
dirs = "6"
log = "0.4"
tempfile = "3"
opener = "0.7"
lazy_static = "1"
once_cell = "1"

# 跨平台输入（键鼠模拟 + 录制监听）
enigo = "0.3"
rdev = "0.5"
scraper = "0.26.0"

# 新增节点依赖
arboard = "3"
regex = "1"
base64 = "0.22"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
