[package]
name = "workflow-engine"
version = "7.2.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
async-trait = "0.1"
which = "7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs", "sync", "process", "signal"] }
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing-appender = "0.2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rhai = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry", "fmt"] }
futures = "0.3"
cron = "0.13"
calamine = "0.24"
rust_xlsxwriter = "0.63"
umya-spreadsheet = "1.2"
csv = "1.3"
zip = "0.6"
anyhow = "1"
thiserror = "2"
dirs = "6"
log = "0.4"
tempfile = "3"
scraper = "0.26.0"

# New node dependencies
walkdir = "2"
glob = "0.3"
md-5 = "0.10"
sha2 = "0.10"
arboard = { version = "3", default-features = false }
regex = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
tokio-tungstenite = "0.24"
futures-util = "0.3"

[features]
default = ["cli"]
cli = []
gui = []

[[bin]]
name = "workflow-engine"
path = "src/main.rs"

[[bin]]
name = "wf-cli"
path = "src/bin/wf-cli.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
strip = true
